--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -30,6 +30,15 @@ header ion-icon {
   transform: translatey(-50%);
   left: 20px;
   font-size: 40px;
+  cursor: pointer;
+}
+
+.loadingContainer {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .MoviesScreenContainer {
