--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -41,11 +41,11 @@ header ion-icon {
   align-items: center;
 }
 
-.MoviesScreenContainer {
+.moviesScreenContainer {
   width: 100%;
 }
 
-.ScreenHeader {
+.screenHeader {
   width: 100%;
   height: 110px;
   display: flex;
@@ -79,12 +79,12 @@ h1 {
   height: 193px;
 }
 
-.SessionScreenContainer {
+.sessionScreenContainer {
   width: 100%;
 }
 
 
-.ScreenFooter {
+.screenFooter {
   width: 100%;
   height: 117px;
   display: flex;
@@ -97,7 +97,7 @@ h1 {
   padding-left: 10px;
 }
 
-.ScreenFooter>div {
+.screenFooter>div {
   width: 64px;
   height: 89px;
   box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.1);
@@ -109,12 +109,12 @@ h1 {
   margin-right: 14px;
 }
 
-.ScreenFooter>div img {
+.screenFooter>div img {
   width: 46px;
   height: 72px;
 }
 
-.ScreenFooter span {
+.screenFooter span {
   font: 400 26px roboto;
 }
 
@@ -148,11 +148,11 @@ a {
   cursor: pointer;
 }
 
-.SeatsScreenContainer {
+.seatsScreenContainer {
   margin-bottom: 117px;
 }
 
-.SeatsScreenContainer .button {
+.seatsScreenContainer .button {
   width: 225px;
   height: 42px;
   margin: 57px auto 0 auto;
@@ -233,32 +233,32 @@ a {
   font: italic 400 18px roboto;
 }
 
-.SuccessScreenContainer>div {
+.successScreenContainer>div {
   margin: 0 0 40px 29px;
   color: #293845;
 
 }
 
-.SuccessScreenContainer>div:first-of-type {
+.successScreenContainer>div:first-of-type {
   margin: 0;
 }
 
-.SuccessScreenContainer h1 {
+.successScreenContainer h1 {
   font: 700 24px roboto;
   margin-bottom: 10px;
 
 }
 
-.SuccessScreenContainer span {
+.successScreenContainer span {
   font: 400 22px roboto;
 }
 
-.SuccessScreenContainer .ScreenHeader h1 {
+.successScreenContainer .screenHeader h1 {
   color: #247A6B;
   margin: 0;
 }
 
-.SuccessScreenContainer .button {
+.successScreenContainer .button {
   margin: 50px auto 0 auto;
   width: 225px;
   height: 42px;
